--- a/frontend/public/components/cloud-services/_cloud-services.scss
+++ b/frontend/public/components/cloud-services/_cloud-services.scss
@@ -280,6 +280,10 @@ $clusterserviceversion-list-border: #ccc;
   flex-direction: column;
 }
 
+.co-catalog-disable-btn {
+  box-shadow: inset 0 1px 0px rgba(255,255,255,0.2), 0 1px 2px rgba(0,0,0,0.25), 0 0px 1px rgba(0,0,0,0.25);
+}
+
 .co-clusterserviceversion-list__disabled-icon {
   margin: 10px;
   width: 100px;
