--- a/frontend/public/style/_common.scss
+++ b/frontend/public/style/_common.scss
@@ -167,10 +167,12 @@ input[type=number]::-webkit-outer-spin-button {
 
 .co-success {
   color: $color-green-success;
+  white-space: nowrap;
 }
 
 .co-error {
   color: $color-red-error;
+  white-space: nowrap;
 }
 
 .co-overflow-y-fade {
