fix responsive design for cloud services

--- a/frontend/public/components/_overflow.scss
+++ b/frontend/public/components/_overflow.scss
@@ -17,3 +17,9 @@ $width: 35px;
     display: none;
   }
 }
+
+.co-m-overflow__link {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: flex;
+}
