Adds (some) cluster monitoring settings to the settings page:
https://jira.coreos.com/browse/PD-22
https://jira.coreos.com/browse/CONSOLE-183

--- a/frontend/public/components/cluster-settings/_cluster-updates.scss
+++ b/frontend/public/components/cluster-settings/_cluster-updates.scss
@@ -86,6 +86,7 @@ $cluster-updates-width: 800px;
 .co-cluster-updates__heading--name-wrapper {
   min-width: 40%;
   padding-right: 10px;
+  padding-bottom: 10px;
 }
 
 .co-cluster-updates__heading--name {
