Add comparison bars to chargeback report data. Default to sorting by first data column instead of namespace/pod/node name. Add hover that shows percentage of total.

--- a/frontend/public/style.scss
+++ b/frontend/public/style.scss
@@ -38,6 +38,7 @@ $fa-font-path: "~font-awesome/fonts";
 @import "components/utils/number-spinner";
 @import "components/utils/status-box";
 @import "components/utils/selector";
+@import "components/chargeback";
 @import "components/cluster-overview";
 @import "components/cluster-settings/cluster-settings";
 @import "components/cluster-settings/cluster-updates";
