--- a/frontend/public/style/coreos.css
+++ b/frontend/public/style/coreos.css
@@ -902,6 +902,14 @@ table th[class*="col-"] {
     outline: 0;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6); }
+  .form-control--invalid {
+    border-bottom-left-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
+    border-color: #f04c5c; }
+  .form-control--invalid:focus {
+    border-color: #f04c5c;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #f04c5c;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #f04c5c; }
   .form-control::-moz-placeholder {
     color: #999;
     opacity: 1; }
