- Show mock cluster list and install instructions if multicluster is not installed. - Add a fake property that changes behavior of lists. - Fix styling of btn-info.

--- a/frontend/public/components/_list.scss
+++ b/frontend/public/components/_list.scss
@@ -34,3 +34,14 @@
 .compaction-btn {
   margin-right: 1px;
 }
+
+.fake-list {
+  user-select: none;
+  position: absolute;
+  opacity: 0.4;
+  background-color: #fff;
+  height: 100%;
+  width: 100%;
+  z-index: 10000;
+  cursor: not-allowed;
+}
