--- a/frontend/public/style/coreos.css
+++ b/frontend/public/style/coreos.css
@@ -1620,7 +1620,7 @@ tbody.collapse.in {
   display: none;
   float: left;
   min-width: 160px;
-  padding: 5px 0;
+  padding: 10px;
   margin: 2px 0 0;
   list-style: none;
   font-size: 14px;
@@ -1640,7 +1640,7 @@ tbody.collapse.in {
     margin: 9px 0;
     overflow: hidden;
     background-color: #e5e5e5; }
-  .dropdown-menu > li > a {
+  .dropdown-menu li > a {
     display: block;
     padding: 3px 20px;
     clear: both;
@@ -1649,21 +1649,21 @@ tbody.collapse.in {
     color: #333333;
     white-space: nowrap; }
 
-.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
+.dropdown-menu li > a:hover, .dropdown-menu li > a:focus {
   text-decoration: none;
   color: #262626;
   background-color: #f5f5f5; }
 
-.dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus {
+.dropdown-menu .active > a, .dropdown-menu .active > a:hover, .dropdown-menu .active > a:focus {
   color: #fff;
   text-decoration: none;
   outline: 0;
   background-color: #337ab7; }
 
-.dropdown-menu > .disabled > a, .dropdown-menu > .disabled > a:hover, .dropdown-menu > .disabled > a:focus {
+.dropdown-menu .disabled > a, .dropdown-menu .disabled > a:hover, .dropdown-menu .disabled > a:focus {
   color: #777777; }
 
-.dropdown-menu > .disabled > a:hover, .dropdown-menu > .disabled > a:focus {
+.dropdown-menu .disabled > a:hover, .dropdown-menu .disabled > a:focus {
   text-decoration: none;
   background-color: transparent;
   background-image: none;
@@ -1676,14 +1676,6 @@ tbody.collapse.in {
 .open > a {
   outline: 0; }
 
-.dropdown-menu-right {
-  left: auto;
-  right: 0; }
-
-.dropdown-menu-left {
-  left: 0;
-  right: auto; }
-
 .dropdown-header {
   display: block;
   padding: 3px 20px;
@@ -1691,14 +1683,6 @@ tbody.collapse.in {
   line-height: 1.42857;
   color: #777777;
   white-space: nowrap; }
-
-.dropdown-backdrop {
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  z-index: 990; }
 
 .pull-right > .dropdown-menu {
   right: 0;
@@ -2716,7 +2700,7 @@ button.close {
   -o-border-radius: 1px;
   border-radius: 1px; }
 
-.dropdown-menu > li > a {
+.dropdown-menu li > a {
   padding: 3px 20px 3px 10px; }
 
 .form-control:focus {
