Fixes all remaining dropdown CSS regressions.

--- a/frontend/public/components/_dropdown.scss
+++ b/frontend/public/components/_dropdown.scss
@@ -12,7 +12,7 @@
     background-color: $dark;
     border: solid 1px $dark;
 
-    & li > a {
+    li > a {
       color: white;
 
       &:hover {
