--- a/frontend/public/style/_layout.scss
+++ b/frontend/public/style/_layout.scss
@@ -81,6 +81,9 @@ body {
     font-weight: 400;
   }
 }
+.co-namespace-selector__menu {
+  padding: 10px;
+}
 
 .co-m-form-row--tall {
   min-height: 225px;
