--- a/frontend/public/style/_overrides.scss
+++ b/frontend/public/style/_overrides.scss
@@ -45,8 +45,9 @@ small {
 }
 
 .text-filter {
-  width: 250px;
+  width: 200px;
   min-width: 150px;
+  margin: 10px;
 }
 .co-m-page-title__obj {
   font-size: 14px;
