Don't show scrollbars if fake-list class overflows the browser window area.

--- a/frontend/public/components/_list.scss
+++ b/frontend/public/components/_list.scss
@@ -40,8 +40,11 @@
   position: absolute;
   opacity: 0.4;
   background-color: #fff;
-  height: 100%;
-  width: 100%;
   z-index: 10000;
   cursor: not-allowed;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
