Move several colors to variables and de-inline styles.

--- a/frontend/public/style/_vars.scss
+++ b/frontend/public/style/_vars.scss
@@ -63,3 +63,4 @@ $color-tectonic-dark-blue: #154A6D;
 $color-tectonic-dark-blue-hover: #19547B;
 $color-tectonic-darkest-blue: #0A2C41;
 
+$color-grey-when-selected: #e5e5e5;
