--- a/frontend/public/components/_dropdown.scss
+++ b/frontend/public/components/_dropdown.scss
@@ -3,7 +3,7 @@
 }
 
 .dropdown__selected {
-  background-color: #52a3d9;
+  background-color: $color-highlight-blue;
 }
 
 .dropdown__disabled {
@@ -19,7 +19,14 @@
   height: 1px;
   margin: 9px 0;
   overflow: hidden;
-  background-color: #e5e5e5;
+  background-color: $color-grey-when-selected;
+}
+
+.dropdown--text-filter {
+  margin: 10px;
+  width: 200px;
+  min-width: 150px;
+  color: black;
 }
 
 .dropdown-menu {
@@ -126,8 +133,8 @@
   }
   li>a.bookmarker {
     &:hover {
-      background-color: white;
-      color: #757575;
+      background-color: #f5f5f5;
+      // color: #757575;
     }
     display: inline-block;
     padding-right: 5px;
@@ -142,9 +149,9 @@
     > a {
       text-decoration: none;
       &:hover,&.hover,&:focus {
-        color: $light-blue;
-        text-decoration: underline;
-        background-color: inherit;
+        // color: $light-blue;
+        // text-decoration: underline;
+        // background-color: inherit;
       }
     }
 
