--- a/frontend/public/components/_dropdown.scss
+++ b/frontend/public/components/_dropdown.scss
@@ -112,7 +112,7 @@ $color-bookmarker: #DDD;
     color: white;
 
     &:hover {
-      background-color: $dark;
+      background-color: rgba(255, 255, 255, 0.15);
       color: white;
     }
   }
