--- a/frontend/public/components/_cluster-overview.scss
+++ b/frontend/public/components/_cluster-overview.scss
@@ -1,20 +1,21 @@
 .group {
-  margin-bottom: 30px;
+  margin-bottom: 15px;
+  padding-right: 0;
 }
 .group__title {
   border: 1px solid $color-grey-background-border;
-  border-radius: 8px 8px 0 0;
+  border-radius: 5px 5px 0 0;
   background-color: $color-grey-background;
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .group__body {
   min-height: 170px;
   border: 1px solid $color-grey-background-border;
   border-top: none;
-  border-radius: 0 0 8px 8px;
-  padding-left: 8px;
-  padding-right: 8px;
+  border-radius: 0 0 5px 5px;
+  padding-left: 15px;
+  padding-right: 15px;
   overflow: hidden;
 }
 
@@ -34,7 +35,7 @@
 
 .cluster-overview-cell__info-row {
   border-bottom: solid 1px $color-grey-background-border;
-  padding: 10px 0;
+  padding: 12px 0;
   line-height: 20px;
   &:last-child {
     border-bottom: none;
