Don't wrap names in navbar. Fixes issues with 'Resource Quotas' and other things being hidden.

--- a/frontend/public/style/_overrides.scss
+++ b/frontend/public/style/_overrides.scss
@@ -236,6 +236,8 @@ tags-input .autocomplete .suggestion-item em {
   line-height: 25px;
   font-weight: 300;
   font-size: 16px;
+  overflow-x: hidden;
+  white-space: nowrap;
 
   a {
     color: white;
