--- a/frontend/public/style.scss
+++ b/frontend/public/style.scss
@@ -55,8 +55,8 @@ $fa-font-path: "~font-awesome/fonts";
 @import "components/log-window";
 @import "components/RBAC/rbac";
 @import "components/resource";
+@import "components/resource-dropdown";
 @import "components/row-filter";
-@import "components/search";
 @import "components/service";
 @import "components/sysevent-icon";
 @import "components/sysevent-stream";
