equal white space around the overview

--- a/frontend/public/components/_cluster-overview.scss
+++ b/frontend/public/components/_cluster-overview.scss
@@ -20,9 +20,10 @@
 }
 
 .cluster-overview-cell {
-  padding: 24px;
+  padding: 15px;
   font-size: 13px;
   margin-bottom: 15px;
+  margin-right: 15px;
 }
 
 .cluster-overview-cell__title {
