Use inertial scrolling in right pane on iOS. Holy cow this was annoying before this was changed.

--- a/frontend/public/style/_layout.scss
+++ b/frontend/public/style/_layout.scss
@@ -44,6 +44,7 @@ body {
   flex-direction: column;
   display: flex;
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 #co-l-view-container {
