--- a/frontend/public/components/_dropdown.scss
+++ b/frontend/public/components/_dropdown.scss
@@ -34,6 +34,10 @@ $color-bookmarker: #DDD;
   color: black;
 }
 
+.favorite {
+  color: gold;
+}
+
 .dropdown-menu {
   position: absolute;
   top: 100%;
