Remove $color-red-failure. Replace its single usage with $color-red-error.

--- a/frontend/public/components/_sysevent-stream.scss
+++ b/frontend/public/components/_sysevent-stream.scss
@@ -27,7 +27,7 @@ $color-dark-border: #ddd;
 }
 
 .co-sysevent-stream__connection-error {
-  color: $color-red-failure;
+  color: $color-red-error;
 }
 
 .co-sysevent-stream__timeline {
