--- a/frontend/public/components/cluster-settings/_cluster-updates.scss
+++ b/frontend/public/components/cluster-settings/_cluster-updates.scss
@@ -195,6 +195,7 @@ $cluster-updates-width: 800px;
   font-size: 16px;
   margin: 15px 0 0 5px;
   padding: 10px;
+  overflow: auto;
 }
 
 .co-cluster-updates__message-box--failed {
