--- a/frontend/public/style.scss
+++ b/frontend/public/style.scss
@@ -87,3 +87,5 @@
 @import "components/cloud-services/cloud-services";
 @import "components/graphs/graphs";
 @import "components/modals/modals";
+@import "components/open-shift-masthead";
+@import "components/nav";
