--- a/frontend/public/components/_dropdown.scss
+++ b/frontend/public/components/_dropdown.scss
@@ -7,7 +7,7 @@ $color-bookmarker: #DDD;
 }
 
 .dropdown__selected {
-  background-color: $color-highlight-blue;
+  background-color: $color-os-nav-active;
 }
 
 .dropdown__disabled {
@@ -95,7 +95,7 @@ $color-bookmarker: #DDD;
         color: white;
         text-decoration: none;
         outline: 0;
-        background-color: #337ab7;
+        background-color: $color-os-nav-active;
       }
     }
     &.dropdown__selected > a {
@@ -123,19 +123,20 @@ $color-bookmarker: #DDD;
 }
 
 .co-namespace-selector {
-  background-color: #2276AD;
-  color: white;
+  background-color: #292E34;
+  color: $color-os-nav-title;
   font-weight: 300;
-  font-size: 14px;
+  font-size: 18px;
   padding: 5px;
   padding-left: 10px;
-  height: 26px;
+  height: 39px;
   flex: 0 0 auto;
+  border-bottom: solid 1px $color-os-nav-item-seperator;
+  border-left: solid 1px $color-os-nav-item-seperator;
 
   &__dropdown {
     display: inline-block;
     padding-left: 5px;
-    font-weight: 400;
   }
 }
 
