--- a/frontend/public/style/_vars.scss
+++ b/frontend/public/style/_vars.scss
@@ -63,3 +63,10 @@ $color-tectonic-dark-blue-hover: #19547B;
 $color-tectonic-darkest-blue: #0A2C41;
 
 $color-grey-when-selected: #e5e5e5;
+
+
+//OpenShift color variables
+$color-os-nav-title: #d1d1d1;
+$color-os-nav-background: #2A2E34;
+$color-os-nav-item-seperator: #050505;
+$color-os-nav-active: #383f47;
