Replacing embedded Bootstrap CSS with Bootstrap-sass SCSS partials

--- a/frontend/public/components/_sysevent-stream.scss
+++ b/frontend/public/components/_sysevent-stream.scss
@@ -23,7 +23,7 @@ $color-dark-border: #ddd;
   right: 0;
   top: 0;
   font-weight: 200;
-  color: $gray;
+  color: $co-gray;
 }
 
 .co-sysevent-stream__connection-error {
