--- a/frontend/public/components/_toggle-play.scss
+++ b/frontend/public/components/_toggle-play.scss
@@ -5,7 +5,7 @@
   height: 32px;
   width: 32px;
   padding: 0;
-  font-size: $font-size-small;
+  font-size: $co-font-size-small;
 
   // play icon
   &.co-toggle-play--inactive:before {
