--- a/frontend/public/components/utils/_selector.scss
+++ b/frontend/public/components/utils/_selector.scss
@@ -7,7 +7,7 @@ $height: 18px;
 
 .co-m-requirement {
   display: inline-block;
-  font-size: $font-size-small;
+  font-size: $co-font-size-small;
   height: $height;
   line-height: $height;
   font-weight: 400;
