--- a/frontend/public/style/_status.scss
+++ b/frontend/public/style/_status.scss
@@ -19,9 +19,9 @@
 }
 
 .co-m-status--unknown {
-  color: $gray;
+  color: $co-gray;
 }
 
 .co-m-status--access-denied {
-  color: $gray;
+  color: $co-gray;
 }
