--- a/frontend/public/style/_vars.scss
+++ b/frontend/public/style/_vars.scss
@@ -56,7 +56,7 @@ $z-plane-2: 200;
 $z-plane-3: 300;
 $z-plane-4: 400;
 
-$font-size-small: 13px;
+$co-font-size-small: 13px;
 
 $color-tectonic-dark-blue: #154A6D;
 $color-tectonic-dark-blue-hover: #19547B;
