--- a/frontend/public/components/utils/_label.scss
+++ b/frontend/public/components/utils/_label.scss
@@ -6,7 +6,7 @@ $height: 18px;
   max-width: 100%;
   border-radius: 10px;
   padding: 0px 8px;
-  font-size: $font-size-small;
+  font-size: $co-font-size-small;
   height: $height;
   line-height: $height;
   margin: 1px;
