--- a/frontend/public/style/_color-pallette.scss
+++ b/frontend/public/style/_color-pallette.scss
@@ -38,16 +38,15 @@ $purple-lighter:lighten($purple, 30%);
 $purple-dark:   darken($purple, 15%);
 $purple-darker: darken($purple, 30%);
 
-$gray:          #999;
-$gray-light:    #ccc;
-$gray-lighter:  #eee;
-$gray-lightest: #f5f5f5;
-$gray-dark:     #666;
-$gray-darker:   #333;
+$co-gray:          #999;
+$co-gray-light:    #ccc;
+$co-gray-lighter:  #eee;
+$co-gray-lightest: #f5f5f5;
+$co-gray-dark:     #666;
+$co-gray-darker:   #333;
 
 $black:         rgba(0,0,0,1);
 $white:         rgba(255,255,255,1);
 
 $highlight: rgba(255, 250, 170, 0.5);
 $translucent-black: rgba(33, 33, 33, 0.95);
-
