frontend: Adds user menu to masthead

--- a/frontend/public/components/_open-shift-masthead.scss
+++ b/frontend/public/components/_open-shift-masthead.scss
@@ -24,5 +24,24 @@
 
 .os-header__user {
   margin-left: auto;
-  margin-right: 10px;
+  margin-right: 20px;
+}
+
+.os-header__user-icon {
+  margin-right: 5px;
+}
+
+.os-header__user-menu {
+  left: auto;
+  letter-spacing: normal;
+  right: 3px;
+  ul > li {
+    padding: 2px 0;
+    a {
+      &:hover {
+        background-color: #def3ff;
+        border: 1px solid #bee1f4;
+      }
+    }
+  }
 }
