--- a/frontend/public/components/_cluster-picker.scss
+++ b/frontend/public/components/_cluster-picker.scss
@@ -2,7 +2,7 @@
   background-color: $color-os-nav-active;
   border-radius: 3px;
   color: $color-os-nav-title;
-  margin: 12px 10px 0 10px;
+  margin: 0 10px;
   padding-left: 10px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
 
