Use pod-overlord color for deployment config badge

--- a/frontend/public/components/_resource.scss
+++ b/frontend/public/components/_resource.scss
@@ -26,6 +26,7 @@ $height: 18px;
 
 .co-m-resource-daemonset,
 .co-m-resource-deployment,
+.co-m-resource-deploymentconfig,
 .co-m-resource-job,
 .co-m-resource-petset,
 .co-m-resource-replicaset,
