--- a/frontend/public/style/_vars.scss
+++ b/frontend/public/style/_vars.scss
@@ -21,6 +21,7 @@ $color-controller-dark: $color-pod-overlord;
 $color-replicaset-dark: $color-controller-dark;
 $color-job-dark: $color-controller-dark;
 $color-deployment-dark: $color-controller-dark;
+$color-deploymentconfig-dark: $color-controller-dark;
 $color-petset-dark: $color-controller-dark;
 
 $color-serviceaccount-dark: $color-configmap-dark;
