--- a/frontend/public/style/_text.scss
+++ b/frontend/public/style/_text.scss
@@ -2,6 +2,7 @@ $kinds: (
   configmap: $color-configmap-dark,
   daemonset: $color-replicaset-dark,
   deployment: $color-deployment-dark,
+  deploymentconfig: $color-deploymentconfig-dark,
   ingress: $color-ingress-dark,
   job: $color-job-dark,
   namespace: $color-namespace-dark,
